[package]
name = "sirene"
version = "2.2.0"
authors = ["Julien Blatecky <julien.blatecky@creatiwity.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-rc.3"
custom_error = "1.9"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2", "serde_json", "64-column-tables"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
futures = "0.3"
r2d2 = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["macros", "io-util", "fs", "rt-multi-thread", "time"] }
tokio-util = { version = "0.6", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = { version = "0.3", default-features = false }
zip = "0.5"

[target.'cfg(any(unix, linux))'.dependencies]
openssl = "0.10"
