[package]
name = "sirene"
version = "4.1.0"
authors = ["Julien Blatecky <julien.blatecky@creatiwity.net>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
custom_error = "1.9"
diesel = { version = "2.3", features = [
  "postgres",
  "chrono",
  "r2d2",
  "serde_json",
  "64-column-tables",
] }
diesel_migrations = { version = "2.3", features = ["postgres"] }
dotenv = "0.15"
futures = "0.3"
openssl-sys = { version = "0.9", features = ["vendored"] }
pq-sys = { version = "0.7", features = ["bundled"] }
r2d2 = "0.8"
reqwest = { version = "0.13", default-features = false, features = [
  "query",
  "json",
  "stream",
  "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = [
  "macros",
  "io-util",
  "fs",
  "rt-multi-thread",
  "time",
] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = { version = "0.4", default-features = false, features = ["server"] }
zip = "7.2"
